CO projeto/xpl/xpl_parser.output
   0  $accept : file $end

   1  file : declarations

   2  declarations : declarations declaration
   3               | declaration

   4  declaration : variable ';'
   5              | function

   6  variable : tPUBLIC tipo tIDENTIFIER '=' expr
   7           | tPUBLIC tipo tIDENTIFIER
   8           | tipo tIDENTIFIER '=' expr
   9           | tipo tIDENTIFIER
  10           | tUSE tipo tIDENTIFIER '=' expr
  11           | tUSE tipo tIDENTIFIER

  12  function : tipo tIDENTIFIER '(' args ')'
  13           | tPROCEDURE tIDENTIFIER '(' args ')'
  14           | tPUBLIC tipo tIDENTIFIER '(' args ')'
  15           | tPUBLIC tPROCEDURE tIDENTIFIER '(' args ')'
  16           | tUSE tipo tIDENTIFIER '(' args ')'
  17           | tUSE tPROCEDURE tIDENTIFIER '(' args ')'
  18           | tipo tIDENTIFIER '(' args ')' '=' literal
  19           | tipo tIDENTIFIER '(' args ')' '=' literal body
  20           | tPROCEDURE tIDENTIFIER '(' args ')' body
  21           | tPUBLIC tipo tIDENTIFIER '(' args ')' '=' literal body
  22           | tPUBLIC tPROCEDURE tIDENTIFIER '(' args ')' body
  23           | tipo tIDENTIFIER '(' args ')' body
  24           | tPUBLIC tipo tIDENTIFIER '(' args ')' body

  25  tipo : tINT_TYPE
  26       | '[' tipo ']'
  27       | tSTRING_TYPE
  28       | tDOUBLE_TYPE

  29  literal : string
  30          | tDOUBLE
  31          | tINTEGER
  32          | tNULL

  33  string : tSTRING
  34         | string tSTRING

  35  body : bloco

  36  bloco : '{' declarationsBlock '}'
  37        | '{' instrucoes '}'
  38        | '{' declarationsBlock instrucoes '}'
  39        | '{' '}'

  40  declarationsBlock : variableBlock
  41                    | declarationsBlock variableBlock

  42  variableBlock : tipo tIDENTIFIER '=' expr ';'
  43                | tipo tIDENTIFIER ';'

  44  instrucao : expr ';'
  45            | expr '!'
  46            | expr tPRINTLN
  47            | bloco
  48            | iteration
  49            | cond
  50            | tSTOP
  51            | tNEXT
  52            | tRETURN

  53  instrucoes : instrucao
  54             | instrucoes instrucao

  55  cond : tIF '(' expr ')' instrucao
  56       | tIF '(' expr ')' instrucao tELSE instrucao
  57       | tIF '(' expr ')' instrucao condCont

  58  condCont : tELSEIF '(' expr ')' instrucao
  59           | tELSEIF '(' expr ')' instrucao tELSE instrucao
  60           | tELSEIF '(' expr ')' instrucao condCont

  61  expr : literal
  62       | '-' expr
  63       | '+' expr
  64       | expr '+' expr
  65       | expr '-' expr
  66       | expr '*' expr
  67       | expr '/' expr
  68       | expr '%' expr
  69       | expr '<' expr
  70       | expr '>' expr
  71       | expr tGE expr
  72       | '@'
  73       | expr tLE expr
  74       | expr tNE expr
  75       | expr tEQ expr
  76       | expr '&' expr
  77       | expr '|' expr
  78       | '~' expr
  79       | lval
  80       | funcall
  81       | '(' expr ')'
  82       | lval '?'
  83       | '[' expr ']'
  84       | lval '=' expr

  85  iteration : tWHILE '(' expr ')' instrucao
  86            | tSWEEP '+' '(' lval ':' expr ':' expr ':' expr ')' instrucao
  87            | tSWEEP '+' '(' lval ':' expr ':' expr ')' instrucao
  88            | tSWEEP '-' '(' lval ':' expr ':' expr ':' expr ')' instrucao
  89            | tSWEEP '-' '(' lval ':' expr ':' expr ')' instrucao

  90  args : arg_func
  91       |

  92  arg_func : arg_func ',' arg
  93           | arg

  94  arg : tipo tIDENTIFIER

  95  funcall : tIDENTIFIER '(' expressoesMais ')'

  96  expressoesMais : expressoes
  97                 |

  98  expressoes : expressoes ',' expr
  99             | expr

 100  lval : tIDENTIFIER
 101       | expr '[' expr ']'

state 0
	$accept : . file $end  (0)

	tPUBLIC  shift 1
	tUSE  shift 2
	tPROCEDURE  shift 3
	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	.  error

	file  goto 8
	function  goto 9
	variable  goto 10
	declaration  goto 11
	declarations  goto 12
	tipo  goto 13


state 1
	variable : tPUBLIC . tipo tIDENTIFIER '=' expr  (6)
	variable : tPUBLIC . tipo tIDENTIFIER  (7)
	function : tPUBLIC . tipo tIDENTIFIER '(' args ')'  (14)
	function : tPUBLIC . tPROCEDURE tIDENTIFIER '(' args ')'  (15)
	function : tPUBLIC . tipo tIDENTIFIER '(' args ')' '=' literal body  (21)
	function : tPUBLIC . tPROCEDURE tIDENTIFIER '(' args ')' body  (22)
	function : tPUBLIC . tipo tIDENTIFIER '(' args ')' body  (24)

	tPROCEDURE  shift 14
	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	.  error

	tipo  goto 15


state 2
	variable : tUSE . tipo tIDENTIFIER '=' expr  (10)
	variable : tUSE . tipo tIDENTIFIER  (11)
	function : tUSE . tipo tIDENTIFIER '(' args ')'  (16)
	function : tUSE . tPROCEDURE tIDENTIFIER '(' args ')'  (17)

	tPROCEDURE  shift 16
	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	.  error

	tipo  goto 17


state 3
	function : tPROCEDURE . tIDENTIFIER '(' args ')'  (13)
	function : tPROCEDURE . tIDENTIFIER '(' args ')' body  (20)

	tIDENTIFIER  shift 18
	.  error


state 4
	tipo : tSTRING_TYPE .  (27)

	.  reduce 27


state 5
	tipo : tINT_TYPE .  (25)

	.  reduce 25


state 6
	tipo : tDOUBLE_TYPE .  (28)

	.  reduce 28


state 7
	tipo : '[' . tipo ']'  (26)

	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	.  error

	tipo  goto 19


state 8
	$accept : file . $end  (0)

	$end  accept


state 9
	declaration : function .  (5)

	.  reduce 5


state 10
	declaration : variable . ';'  (4)

	';'  shift 20
	.  error


state 11
	declarations : declaration .  (3)

	.  reduce 3


state 12
	file : declarations .  (1)
	declarations : declarations . declaration  (2)

	tPUBLIC  shift 1
	tUSE  shift 2
	tPROCEDURE  shift 3
	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	$end  reduce 1

	function  goto 9
	variable  goto 10
	declaration  goto 21
	tipo  goto 13


state 13
	variable : tipo . tIDENTIFIER '=' expr  (8)
	variable : tipo . tIDENTIFIER  (9)
	function : tipo . tIDENTIFIER '(' args ')'  (12)
	function : tipo . tIDENTIFIER '(' args ')' '=' literal  (18)
	function : tipo . tIDENTIFIER '(' args ')' '=' literal body  (19)
	function : tipo . tIDENTIFIER '(' args ')' body  (23)

	tIDENTIFIER  shift 22
	.  error


state 14
	function : tPUBLIC tPROCEDURE . tIDENTIFIER '(' args ')'  (15)
	function : tPUBLIC tPROCEDURE . tIDENTIFIER '(' args ')' body  (22)

	tIDENTIFIER  shift 23
	.  error


state 15
	variable : tPUBLIC tipo . tIDENTIFIER '=' expr  (6)
	variable : tPUBLIC tipo . tIDENTIFIER  (7)
	function : tPUBLIC tipo . tIDENTIFIER '(' args ')'  (14)
	function : tPUBLIC tipo . tIDENTIFIER '(' args ')' '=' literal body  (21)
	function : tPUBLIC tipo . tIDENTIFIER '(' args ')' body  (24)

	tIDENTIFIER  shift 24
	.  error


state 16
	function : tUSE tPROCEDURE . tIDENTIFIER '(' args ')'  (17)

	tIDENTIFIER  shift 25
	.  error


state 17
	variable : tUSE tipo . tIDENTIFIER '=' expr  (10)
	variable : tUSE tipo . tIDENTIFIER  (11)
	function : tUSE tipo . tIDENTIFIER '(' args ')'  (16)

	tIDENTIFIER  shift 26
	.  error


state 18
	function : tPROCEDURE tIDENTIFIER . '(' args ')'  (13)
	function : tPROCEDURE tIDENTIFIER . '(' args ')' body  (20)

	'('  shift 27
	.  error


state 19
	tipo : '[' tipo . ']'  (26)

	']'  shift 28
	.  error


state 20
	declaration : variable ';' .  (4)

	.  reduce 4


state 21
	declarations : declarations declaration .  (2)

	.  reduce 2


state 22
	variable : tipo tIDENTIFIER . '=' expr  (8)
	variable : tipo tIDENTIFIER .  (9)
	function : tipo tIDENTIFIER . '(' args ')'  (12)
	function : tipo tIDENTIFIER . '(' args ')' '=' literal  (18)
	function : tipo tIDENTIFIER . '(' args ')' '=' literal body  (19)
	function : tipo tIDENTIFIER . '(' args ')' body  (23)

	'='  shift 29
	'('  shift 30
	';'  reduce 9


state 23
	function : tPUBLIC tPROCEDURE tIDENTIFIER . '(' args ')'  (15)
	function : tPUBLIC tPROCEDURE tIDENTIFIER . '(' args ')' body  (22)

	'('  shift 31
	.  error


state 24
	variable : tPUBLIC tipo tIDENTIFIER . '=' expr  (6)
	variable : tPUBLIC tipo tIDENTIFIER .  (7)
	function : tPUBLIC tipo tIDENTIFIER . '(' args ')'  (14)
	function : tPUBLIC tipo tIDENTIFIER . '(' args ')' '=' literal body  (21)
	function : tPUBLIC tipo tIDENTIFIER . '(' args ')' body  (24)

	'='  shift 32
	'('  shift 33
	';'  reduce 7


state 25
	function : tUSE tPROCEDURE tIDENTIFIER . '(' args ')'  (17)

	'('  shift 34
	.  error


state 26
	variable : tUSE tipo tIDENTIFIER . '=' expr  (10)
	variable : tUSE tipo tIDENTIFIER .  (11)
	function : tUSE tipo tIDENTIFIER . '(' args ')'  (16)

	'='  shift 35
	'('  shift 36
	';'  reduce 11


state 27
	function : tPROCEDURE tIDENTIFIER '(' . args ')'  (13)
	function : tPROCEDURE tIDENTIFIER '(' . args ')' body  (20)
	args : .  (91)

	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	')'  reduce 91

	arg  goto 37
	args  goto 38
	arg_func  goto 39
	tipo  goto 40


state 28
	tipo : '[' tipo ']' .  (26)

	.  reduce 26


state 29
	variable : tipo tIDENTIFIER '=' . expr  (8)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 52
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 30
	function : tipo tIDENTIFIER '(' . args ')'  (12)
	function : tipo tIDENTIFIER '(' . args ')' '=' literal  (18)
	function : tipo tIDENTIFIER '(' . args ')' '=' literal body  (19)
	function : tipo tIDENTIFIER '(' . args ')' body  (23)
	args : .  (91)

	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	')'  reduce 91

	arg  goto 37
	args  goto 57
	arg_func  goto 39
	tipo  goto 40


state 31
	function : tPUBLIC tPROCEDURE tIDENTIFIER '(' . args ')'  (15)
	function : tPUBLIC tPROCEDURE tIDENTIFIER '(' . args ')' body  (22)
	args : .  (91)

	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	')'  reduce 91

	arg  goto 37
	args  goto 58
	arg_func  goto 39
	tipo  goto 40


state 32
	variable : tPUBLIC tipo tIDENTIFIER '=' . expr  (6)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 59
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 33
	function : tPUBLIC tipo tIDENTIFIER '(' . args ')'  (14)
	function : tPUBLIC tipo tIDENTIFIER '(' . args ')' '=' literal body  (21)
	function : tPUBLIC tipo tIDENTIFIER '(' . args ')' body  (24)
	args : .  (91)

	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	')'  reduce 91

	arg  goto 37
	args  goto 60
	arg_func  goto 39
	tipo  goto 40


state 34
	function : tUSE tPROCEDURE tIDENTIFIER '(' . args ')'  (17)
	args : .  (91)

	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	')'  reduce 91

	arg  goto 37
	args  goto 61
	arg_func  goto 39
	tipo  goto 40


state 35
	variable : tUSE tipo tIDENTIFIER '=' . expr  (10)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 62
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 36
	function : tUSE tipo tIDENTIFIER '(' . args ')'  (16)
	args : .  (91)

	tSTRING_TYPE  shift 4
	tINT_TYPE  shift 5
	tDOUBLE_TYPE  shift 6
	'['  shift 7
	')'  reduce 91

	arg  goto 37
	args  goto 63
	arg_func  goto 39
	tipo  goto 40


state 37
	arg_func : arg .  (93)

	.  reduce 93


state 38
	function : tPROCEDURE tIDENTIFIER '(' args . ')'  (13)
	function : tPROCEDURE tIDENTIFIER '(' args . ')' body  (20)

	')'  shift 64
	.  error


state 39
	args : arg_func .  (90)
	arg_func : arg_func . ',' arg  (92)

	','  shift 65
	')'  reduce 90


state 40
	arg : tipo . tIDENTIFIER  (94)

	tIDENTIFIER  shift 66
	.  error


state 41
	literal : tINTEGER .  (31)

	.  reduce 31


state 42
	funcall : tIDENTIFIER . '(' expressoesMais ')'  (95)
	lval : tIDENTIFIER .  (100)

	'('  shift 67
	tPRINTLN  reduce 100
	'='  reduce 100
	'|'  reduce 100
	'&'  reduce 100
	tEQ  reduce 100
	tNE  reduce 100
	tGE  reduce 100
	'>'  reduce 100
	'<'  reduce 100
	tLE  reduce 100
	'+'  reduce 100
	'-'  reduce 100
	'*'  reduce 100
	'/'  reduce 100
	'%'  reduce 100
	'['  reduce 100
	';'  reduce 100
	')'  reduce 100
	']'  reduce 100
	'!'  reduce 100
	'?'  reduce 100
	':'  reduce 100
	','  reduce 100


state 43
	string : tSTRING .  (33)

	.  reduce 33


state 44
	literal : tDOUBLE .  (30)

	.  reduce 30


state 45
	literal : tNULL .  (32)

	.  reduce 32


state 46
	expr : '~' . expr  (78)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 68
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 47
	expr : '+' . expr  (63)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 69
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 48
	expr : '-' . expr  (62)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 70
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 49
	expr : '[' . expr ']'  (83)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 71
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 50
	expr : '(' . expr ')'  (81)

	tINTEGER  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tDOUBLE  shift 44
	tNULL  shift 45
	'~'  shift 46
	'+'  shift 47
	'-'  shift 48
	'['  shift 49
	'('  shift 50
	'@'  shift 51
	.  error

	expr  goto 72
	literal  goto 53
	funcall  goto 54
	lval  goto 55
	string  goto 56


state 51
	expr : '@' .  (72)

	.  reduce 72


state 52
	variable : tipo tIDENTIFIER '=' expr .  (8)
	expr : expr . '+' expr  (64)
	expr : expr . '-' expr  (65)
	expr : expr . '*' expr  (66)
	expr : expr . '/' expr  (67)
	expr : expr . '%' expr  (68)
	expr : expr . '<' expr  (69)
	expr : expr . '>' expr  (70)
	expr : expr . tGE expr  (71)
	expr : expr . tLE expr  (73)
	expr : expr . tNE expr  (74)
	expr : expr . tEQ expr  (75)
	expr : expr . '&' expr  (76)
	expr : expr . '|' expr  (77)
	lval : expr . '[' expr ']'  (101)

	'|'  shift 73
	'&'  shift 74
	tEQ  shift 75
	tNE  shift 76
	tGE  shift 77
	'>'  shift 78
	'<'  shift 79
	tLE  shift 80
	'+'  shift 81
	'-'  shift 82
	'*'  shift 83
	'/'  shift 84
	'%'  shift 85
	'['  shift 86
	';'  reduce 8


state 53
	expr : literal .  (61)

	.  reduce 61


state 54
	expr : funcall .  (80)

	.  reduce 80


state 55
	expr : lval .  (79)
	expr : lval . '?'  (82)
	expr : lval . '=' expr  (84)
